MDEV-9598: Donor's rsync SST script hangs if FTWRL fails

Post-fix: initialize err